[package]
name = "amethyst_text"
version = "0.4.0"
authors = ["W. Brian Gourlie <bgourlie@gmail.com>"]
description = "Amethyst Text crate"
keywords = ["ui", "specs", "ecs", "amethyst"]
categories = ["game-engines"]

documentation = "https://www.amethyst.rs/doc/master/doc/amethyst_text/"
homepage = "https://www.amethyst.rs/"
repository = "https://github.com/amethyst/amethyst"
license = "MIT/Apache-2.0"

[dependencies]
amethyst_assets = { path = "../amethyst_assets", version = "0.5.0" }
amethyst_core = { path = "../amethyst_core", version = "0.4.0" }
glyph_brush = "0.2.2"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
font-kit = "0.1"

thread_profiler = { version = "0.3", optional = true }

[features]
profiler = [ "thread_profiler/thread_profiler" ]
nightly = [ "amethyst_core/nightly" ]
